--- a/app/static/app/views/main.html
+++ b/app/static/app/views/main.html
@@ -3,13 +3,13 @@
     <div class="row">
         <div class="col-lg-5">
             <!--<img src="images/utalogo.png">-->
-            <h1 style="padding-left: 10px">Intelligent Maverick Scheduler</h1>
+            <h1 style="padding-left: 10px">Intelligent Maverick Assistant</h1>
         </div>
         <div class="col-lg-7">
-            <h3 style="float: right" ng-click="user_modal()">{{username}}</h3>
+            <h3 style="float: right; padding-right: 10px" ng-click="user_modal()">{{username}}</h3>
 
             <div class="my_group btn-group btn-group-sm" role="group" style="float: right">
-                <button class="my_nav meow btn btn-default" style="width: 120px">
+                <button class="my_nav meow btn btn-default" style="width: 120px" ng-click="check_status()">
                     <h6><span class="glyphicon {{status}}"></span></h6>
                 </button>
                 <button class="my_nav meow btn btn-default" ng-click="set_stage(1)">
@@ -201,7 +201,8 @@
                             <input type="number" class="form-control" placeholder="6" ng-model="model.sleep">
                         </div>
                         <div class="form-group form-group-sm">
-                            <label class=""><strong>Study</strong> (hours per week, suggested {{courses.length * 3}})</label>
+                            <label class=""><strong>Study</strong> (hours per week, suggested {{courses.length *
+                                3}})</label>
                             <input required type="number" value="0" class="form-control"
                                    placeholder=""
                                    ng-model="model.study">
@@ -234,10 +235,10 @@
             <h1>{{fetch.schedule.name}}</h1>
 
             <div class="row well-lg">
-                <h1 ng-hide="fetch.schedule">No Schedule Selected!</h1>
+                <h1 ng-hide="fetch.schedule.name">No Schedule Selected!</h1>
 
                 <div class="col-lg-1" style="width: 12.5%; text-align: center"
-                     ng-repeat="day in fetch.schedule.days">
+                     ng-repeat="day in fetch.schedule.days" ng-show="view == 'week'">
                     <h4 style="color: white">{{day[0]| capitalize}}</h4>
 
                     <div
@@ -264,13 +265,46 @@
 
                     </div>
                 </div>
-                <div class="col-lg-1" style="width: 12.5%; text-align: center;" ng-show="fetch.schedule">
+                <div class="col-lg-1 " style="width: 87.5%; text-align: center"
+                     ng-show="view == 'day'"
+                >
+                    <div style="height: {{((block.end_time.hour - block.start_time.hour) * 60) + (block.end_time.minute
+               - block.start_time.minute) * .5}}px; min-height: {{cal_min_height(block.type)}}; width: 100%; background-color:
+               {{get_color(block.type)}};
+               color: white; margin-bottom: 5px;" ng-repeat="block in fetch.schedule.day[1]">
+                        <div style="height: inherit; padding-top: 5px; padding-bottom: 2px">
+                            <strong>{{block.start_time.hour}}:{{block.start_time.minute}} -
+                                {{block.end_time.hour}}:{{block.end_time.minute}}</strong><br>
+
+                            <div ng-hide="block.room">
+                                {{block.type | capitalize}} @ {{block.location | capitalize}}<br>
+                            </div>
+
+                            {{block.name}} {{block.section}}<br>
+
+                            {{block.room}}<br>
+                            {{block.instructor}}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-1" style="width: 12.5%; text-align: center;" ng-show="fetch.schedule.name">
                     <h4 style="color: white">Options</h4>
 
                     <div style="width: 100%" class="btn-group-vertical" role="group">
-                        <button class="btn btn-default">Validate<span></span></button>
-                        <button class="btn btn-warning" ng-click="deleteSchedule(fetch.schedule.id)">Delete</button>
+                        <button class="btn btn-info" ng-click="set_day(0)">Monday</button>
+                        <button class="btn btn-info" ng-click="set_day(1)">Tuesday</button>
+                        <button class="btn btn-info" ng-click="set_day(2)">Wednesday
+                        </button>
+                        <button class="btn btn-info" ng-click="set_day(3)">Thursday</button>
+                        <button class="btn btn-info" ng-click="set_day(4)">Friday</button>
+                        <button class="btn btn-info" ng-click="set_day(5)">Saturday</button>
+                        <button class="btn btn-info" ng-click="set_day(6)">Sunday</button>
+                        <button class="btn btn-info" ng-click="set_day(7)">Full Week</button>
+                         <!--<button class="btn btn-default">Validate<span></span></button>-->
+                        <button class="btn btn-danger" ng-click="deleteSchedule(fetch.schedule.id)">Delete</button>
                     </div>
+
+
                 </div>
             </div>
         </div>
@@ -282,12 +316,13 @@
             <div class="well sideBoxes" style="margin-top: 20px;">
                 <!--Maybe use this for notifications instead? or even just split it?-->
                 <div class="alert alert-{{note.type}}" role="alert" style="margin-bottom: 10px; text-align: center"
-                     ng-repeat="note in notifications track by $index"><strong>{{note.type | capitalize}}!</strong>
+                     ng-repeat="note in notifications.list track by $index"><strong>{{note.type |
+                    capitalize}}!</strong>
                     {{note
                     .text}}
                 </div>
             </div>
-            <h2 style="color: white; text-align: center">Schedules
+            <h2 style="color: white; text-align: center" ng-click="schedules.refresh_schedules()">Schedules
                 <span class="badge">{{fetch.schedules.length | number}}</span></h2>
 
             <div class="sideBoxes well" style="margin-bottom: 20px">
