--- a/app/static/app/views/templates/image-modal.html
+++ b/app/static/app/views/templates/image-modal.html
@@ -1,15 +1,19 @@
 <div class="modal-content">
-    <div class="modal-body">
-        <!--<img class="resize image" ng-src="/api/hist/image/{[ url ]}">-->
+    <div class="modal-header">
+        <h3 style="text-align: center; color: black;">Delete User</h3>
 
+    </div>
+    <div class="modal-body" style="text-align: center;">
+        <!--<img class="resize image" ng-src="/api/hist/image/{[ url ]}">-->
+        <label style="color: black">Password</label>
+        <input type="password" ng-model="password">
+        <button type="button" ng-click="delete()" class="btn btn-clean">
+            Delete
+        </button>
     </div>
     <div class="modal-footer">
         <!--<div class="col-lg-10 well" style="text-align: center">{[caption]}</div>-->
 
-        <input type="password" ng-model="password">
-        <button type="button" ng-click="delete()" class="btn btn-clean">
-            Delete User
-        </button>
         <div class="col-lg-2">
             <button type="button" ng-click="cancel()" class="btn btn-clean" data-dismiss="modal">
                 Close
